@@ -103,6 +103,7 @@ int PrefsParser::parseOption(char *name, char *value)
       { "show_quit_dialog", &prefs.show_quit_dialog, PREFS_BOOL },
       { "show_reload", &prefs.show_reload, PREFS_BOOL },
       { "show_save", &prefs.show_save, PREFS_BOOL },
+      { "show_url", &prefs.show_url, PREFS_BOOL },
       { "show_search", &prefs.show_search, PREFS_BOOL },
       { "show_stop", &prefs.show_stop, PREFS_BOOL },
       { "show_tools", &prefs.show_tools, PREFS_BOOL },
